Fixed JarInJarLoader